Mitarbeiter Hinzufügen Template added

--- a/www/template/personal.html
+++ b/www/template/personal.html
@@ -39,7 +39,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#">Mitarbeiter anzeigen</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Mitarbeiter anlegen</a></li>
+                        <li><a href="personal_add.html">Mitarbeiter anlegen</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Mitarbeiter</a></li>
@@ -129,7 +129,7 @@
 
 </div>
 
-
+</div>
 </div>
 <!-- /container -->
 <div class="container">
